force-app/main/default/objects/cdcpc__RD_Routing_Translation__c/cdcpc__RD_Routing_Translation__c.object-meta.xml
<CustomObject>
    <label>RD Routing Translation</label>
    <nameField>
        <label>RD Routing Translation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Routing Translation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>