force-app/main/default/objects/cdcpc__RD_Routing_Translation__c/fields/cdcpc__Num4__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Num4__c</fullName>
    <label>Num4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>