force-app/main/default/objects/cdcpc__RD_Routing_Translation__c/fields/cdcpc__TextOpp2__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TextOpp2__c</fullName>
    <label>TextOpp2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>