force-app/main/default/objects/cdcpc__RD_Routing_Translation__c/fields/cdcpc__TextOpp5__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TextOpp5__c</fullName>
    <label>TextOpp5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>