force-app/main/default/objects/cdcpc__RD_Routing_Translation__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>cdcpc__Operation_No__c</columns>
    <columns>cdcpc__Text1__c</columns>
    <columns>cdcpc__Text2__c</columns>
    <columns>cdcpc__Text3__c</columns>
    <columns>cdcpc__Text4__c</columns>
    <columns>cdcpc__Text5__c</columns>
    <columns>cdcpc__TextOpp1__c</columns>
    <columns>cdcpc__TextOpp2__c</columns>
    <columns>cdcpc__TextOpp3__c</columns>
    <columns>cdcpc__TextOpp4__c</columns>
    <columns>cdcpc__TextOpp5__c</columns>
    <columns>cdcpc__CDC_Ext_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>